--- a/vibm/finestrino/finestrino/ui/visualizer/index.html
+++ b/vibm/finestrino/finestrino/ui/visualizer/index.html
@@ -2,5 +2,7 @@
 <html lang="en">
     <head>
         <title>Finestrino Task Visualizer</title>
+        <link href="css/finestrino.css" rel="stylesheet">
+        <script 
     </head>
 </html>
