--- a/vibm/finestrino/finestrino/ui/visualizer/index.html
+++ b/vibm/finestrino/finestrino/ui/visualizer/index.html
@@ -3,6 +3,111 @@
     <head>
         <title>Finestrino Task Visualizer</title>
         <link href="css/finestrino.css" rel="stylesheet">
-        <script 
+        <script src="lib/jquery-1.10.0.min.js"></script> 
+        <link href="lib/bootstrap3/css/bootstrap.min.css" rel="stylesheet">
+        <link href="lib/bootstrap3/css/bootstrap-theme.min.css" rel="stylesheet">
+        <script src="lib/bootstrap3/js/bootstrap.min.js"></script>
+        <link href="stylesheet" href="css/tipsy.css"> 
+        <link href="css/tipsy.css" rel="stylesheet">
+        <link href="lib/AdminLTE/css/AdminLTE.min.css" rel="stylesheet">
+        <link href="css/font-awesome.min.css" rel="stylesheet">
+        <link href="lib/AdminLTE/css/skin-green-light.min.css" rel="stylesheet"/>
+        <link href="lib/datatables/css/jquery.dataTables.min.css" rel="stylesheet"/>
+        <link href="lib/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet">
+        <script src="js/tipsy.js"></script>
+        <script src="lib/jquery.slimscroll.min.js"></script>
+        <script src="lib/AdminLTE/js/app.min.js"></script>
+        <script src="lib/datatables/js/jquery.dataTables.min.js"></script>
+        <script src="lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+        <meta name="viewport" content=
     </head>
+    <body class="skin-green-light fixed">
+        <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        </div>
+        <div class="modal fade" id="statusMessageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">            
+        </div>
+        <div class="modal fade" id="scheduledMessagesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        </div>
+
+        <div class="wrapper">
+            <div class="main-header">
+                <a class="logo" href="#">Finestrino Task Status</a>
+                <nav class="navbar navbar-static-top">
+                    <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                        <span class="sr-only">Toggle Navigation</span>
+                    </a>
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" role="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+
+                        <div class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                <li><a class="js-nav-link" href="#tab=tasks" data-tab="taskList">Task List</a></li>
+                                <li><a class="js-nav-link" href="#tab=graph" data-tab="dependencyGraph">Dependency Graph</a></li>
+                                <li><a class="js-nav-limk" href="#tab=workers" data-tab="workerList">Workers</a></li>
+                                <li><a class="js-nav-link" href="#tab=resource" data-tab="resourceList">Resources</a></li>
+                            </ul>
+                            <form class="navbar-form navbar-right" id="pause-form"></form>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="content-wrapper">
+            <div class="content">
+                <div class="tab-content">
+                    <section id="taskList" class="container-fluid tab-pane active">
+                        <div class="row">
+                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                <div class="info-box status-info" data-color='yellow' data-category='PENDING' id="PENDING_info">
+                                    <span class="info-box-icon bg-yellow"><i class="fa fa-spinner fa-pulse"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Pending Tasks</span>
+                                        <span class="info-box-number">?</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                <div class="info-box status-info" data-color="aqua" data-category="RUNNING" id="RUNNING_info">
+                                    <span class="info-box-icon bg-aqua"><i class="fa fa-spinner fa-pulse"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Running Tasks</span>
+                                        <span class="info-box-number">?</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                <div class="info-box status-info" data-color="purple" data-category="BATCH_RUNNINGH" id="BATCH_RUNNING_info">
+                                    <span class=""></span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section id="dependencyGraph" class="tab-pane">
+                        <div class="container-fluid">
+                            <div class="form-group col-md-6 col-sm-4">
+                                <form class="form-inline" id="loadTaskForm">
+                                    <input id="js-task-id" type="text" class="search-query form-control" placeholder="TaskId">
+                                    <button type="submit" class="btn btn-default form-control">Show task details</button>
+                                </form>
+                            </div>
+                            <div id="graphContainer" class="container-fluid">
+                            <h4 id="dependencyTitle"></h4>
+                            <h5>Dependency Graph</h5>
+                            <div id="graphPlaceholder"></div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
